test/corpus/quilt.txt
================================================================================
Quilt Expression
================================================================================
1 + 2
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (integer_literal)
    (integer_literal)))


================================================================================
Quilt Statement
================================================================================
let x = y;
--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (identifier)
    (identifier)))

================================================================================
Quilt Hole
================================================================================
{}
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (block)))

================================================================================
Quilt Hole Var
================================================================================
let {} = y;
--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (quilt_hole)
    (identifier)))

================================================================================
Quilt Hole Type
================================================================================
impl Lift for {} {}
--------------------------------------------------------------------------------

(source_file
  (impl_item
    (type_identifier)
    (quilt_hole)
    (declaration_list)))
